fixed broken delete collection UI, also removed weird scrollbar in delete collection modal

--- a/frontend/src/components/collection/DeleteCollectionUI/style.scss
+++ b/frontend/src/components/collection/DeleteCollectionUI/style.scss
@@ -1,23 +1,15 @@
-
-
 .wr-delete-modal {
-    label {
-        display: block;
-        margin-top: 2.5rem;
-    }
+    overflow: auto !important;
+      .modal-body {
+          padding: 0;
+      }
 
-    button {
-        svg {
-            margin-right: .5rem;
-            vertical-align: text-top;
+      .anon-cta {
+          padding: 1.5rem 3rem;
 
-            path {
-                fill: #FFF;
-            }
-        }
-    }
-
-    input {
-        width: 100%;
-    }
+          h5:nth-child(1n) {
+              margin-top: 1.5rem;
+              margin-bottom: 0;
+          }
+      }
 }
